--- a/sugar-api/pom.xml
+++ b/sugar-api/pom.xml
@@ -33,6 +33,12 @@
             <version>1.4.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
+
         <!-- Logging dependencies -->
 
         <dependency>
